# inmet-datas

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  collect_link.py  dados.db  data_base.py  data_inmet.py  download_files.py  extract_files.py  main.py  process_files.py  pyproject.toml  requirements.txt  tatus  test.ipynb  teste_projeto (1).ipynb  treatment_files.py
app/: app.py
config/: config.py
src/: app.py  data_base.py  download_files.py  extract_files.py  main.py  process_files.py  treatment_files.py
src/weather/: data_base.py  process_files.py  treatment_files.py
src/weather/config/: config.py
src/weather/database/: data_base.py
src/weather/processing/: process_files.py  treatment_files.py
src/weather/utils/: collect_link.py  download_files.py  extract_files.py
