[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "weather"
version = "0.2.0"
authors = [
  { name = "Pedro Reis - GCSTC", email = "pedro.venetillo@equatorialenergia.com.br" }
]
description = "Weather webscraping API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]